--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<section id="section">
+		<h1>Testimonials</h1>
+		<div class="div">
+		<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+		<p class="right">-John Doe</p>
+		</div>
+		
+		<div class="div">
+		<p>Ihave been using this for a few weeks now and it has completely transformed my workflow.</p>
+		<p class="right">-Jane Smith</p>	
+		</div>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
