--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="body">
 		<h1>Testimonials</h1>
 		<div class="div">
 		<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
@@ -18,6 +19,7 @@
 		<p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
 		<p class="right">-Jane Smith</p>	
 		</div>
+	</div>
 	
     <script type="text/javascript" src="./script.js">
 </script>
